Fix project page header alignment

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,15 +1,16 @@
 .contain-to-grid {
   background-color: white;
 }
-.contain-to-grid .top-bar {
-  padding: .7em 1em;
-
+.contain-to-grid .top-bar, .project-head > .columns {
   @media #{$large-up} {
     width: 75em;
   }
   @media only screen and (min-width: 64.063em) and (max-width: 75em) {
     width: 64em;
   }
+}
+.contain-to-grid .top-bar {
+  padding: .7em 1em;
 
   .name h1 {
     color: #5C5C5C;
